--- a/ViewController/public_html/create/whodAddInformativeNotes.jspx
+++ b/ViewController/public_html/create/whodAddInformativeNotes.jspx
@@ -3,34 +3,86 @@
           xmlns:af="http://xmlns.oracle.com/adf/faces/rich">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <f:view>
-        <af:document title="whodAddInformativeNotes.jspx" id="d1">
-            <af:form id="f1">
-                <af:pageTemplate viewId="/CSMQ.jspx" value="#{bindings.pageTemplateBinding}" id="pt1">
-                    <f:facet name="header">
-                        <af:group id="g2">
-                            <af:train value="#{controllerContext.currentViewPort.taskFlowContext.trainModel}" id="t1"/>
-                            <af:spacer width="10" height="10" id="s1"/>
-                        </af:group>
-                    </f:facet>
-                    <f:facet name="main">
-                        <af:group id="g1">
-                        
-                         
-                        
-                        
+    <af:document id="d1" uncommittedDataWarning="on">
+      <af:form id="f1">
+        <af:pageTemplate viewId="/CSMQ.jspx"
+                         value="#{bindings.pageTemplateBinding}" id="pt1">
+          <f:facet name="header">
+           <af:group id="g2">
+              <af:train value="#{controllerContext.currentViewPort.taskFlowContext.trainModel}" id="t1"/>
+              <af:spacer width="10" height="10" id="s1"/>
+            </af:group>
+          </f:facet>
+          <f:facet name="main">
+            <af:group id="g1">
+              <af:panelBox id="pgl3" inlineStyle="width:1195px; padding:5px;" text="Informative Notes for #{pageFlowScope.WhodWizardBean.currentTermName}" showDisclosure="false">
+                <af:panelTabbed id="pt2" inlineStyle="height:371px; width:1161px;">
+                  <!-- @author MTW
+                        06/11/2014
+                        @fsds NMAT-UC01.01 & NMAT-UC11.01 & NMAT-UC01.02 & NMAT-UC11.02
+                    -->
+                  <af:showDetailItem text="Description" id="sdi1" inflexibleHeight="10">
+                    <af:panelGroupLayout id="pgl1" layout="vertical" inlineStyle="height:560px; width:1257px;">
+                      <af:inputText id="it2" rows="24" editable="always" binding="#{WhodWizardUIBean.controlInfNoteMQDescription}"
+                                    required="#{WhodRenderingRulesBean.wizardInfNotesRenderSave}"
+                                    requiredMessageDetail="An MQ Description is required." changed="false" columns="225"
+                                    value="#{pageFlowScope.WhodWizardBean.currentInfNoteDescription}"
+                                    showRequired="true"
+                                    readOnly="#{WhodRenderingRulesBean.wizardInfNotesDisableEdit}"/>
+                    </af:panelGroupLayout>
+                  </af:showDetailItem>
+                  <!-- @author MTW
+                        06/11/2014
+                        @fsds NMAT-UC01.02 & NMAT-UC11.02
+                    -->
+                  <af:showDetailItem text="Notes" id="showDetailItem1" inflexibleHeight="10">
+                    <af:panelGroupLayout id="panelGroupLayout1" layout="vertical" inlineStyle="height:560px; width:1257px;">
+                      <af:inputText id="inputText1" rows="24" editable="always" binding="#{WhodWizardUIBean.controlInfNoteMQNotes}" required="false" changed="false"
+                                    columns="225" value="#{pageFlowScope.WhodWizardBean.currentInfNoteNotes}" showRequired="false"
+                                    readOnly="#{WhodRenderingRulesBean.wizardInfNotesDisableEdit}"/>
+                    </af:panelGroupLayout>
+                  </af:showDetailItem>
+                  <!-- @author MTW
+                        06/11/2014
+                        @fsds NMAT-UC01.02 & NMAT-UC11.02
+                    -->
+                  <af:showDetailItem text="Source" id="showDetailItem2" inflexibleHeight="10" flex="0" visible="false">
+                    <af:panelGroupLayout id="panelGroupLayout2" layout="vertical" inlineStyle="height:560px; width:1257px;">
+                      <af:inputText id="inputText2" rows="24" editable="always" binding="#{WhodWizardUIBean.controlInfNoteMQSource}" required="false" changed="false"
+                                    columns="225" value="#{pageFlowScope.WhodWizardBean.currentInfNoteSource}" showRequired="false"
+                                    readOnly="#{WhodRenderingRulesBean.wizardInfNotesDisableEdit}"/>
+                    </af:panelGroupLayout>
+                  </af:showDetailItem>
+                </af:panelTabbed>
+                <af:spacer width="20" height="10" id="s2"/>
+                <af:commandButton text="Save" id="cb1" action="#{pageFlowScope.WhodWizardBean.saveAllInfNotes}"
+                                  rendered="#{WhodRenderingRulesBean.wizardInfNotesRenderSave}"
+                                  disabled="#{WhodRenderingRulesBean.wizardInfNotesDisableEdit}"/>
+                <f:facet name="toolbar"/>
+              </af:panelBox>
+            </af:group>
+          </f:facet>
+          <f:facet name="pageBottom">
+            <af:panelGroupLayout id="pgl2" layout="horizontal" inlineStyle="padding:3px;">
               
-                            <af:panelBox id="pgl1" text="Details" showDisclosure="false"
-                                         inlineStyle="height:158px; width:1195px; padding:5px;">
-                                <af:panelGroupLayout id="pgl3" layout="horizontal" valign="top"/>
-                                <f:facet name="toolbar"/>
-                            </af:panelBox>
-                        </af:group>
-                    </f:facet>
-                    <f:facet name="pageBottom">
-                        <af:panelGroupLayout id="pgl2" layout="horizontal" inlineStyle="padding:3px;"/>
-                    </f:facet>
-                </af:pageTemplate>
-            </af:form>
-        </af:document>
+              <af:spacer width="10" height="10" id="s6"/>
+              <af:trainButtonBar value="#{controllerContext.currentViewPort.taskFlowContext.trainModel}" id="tbb1"/>
+              <af:commandButton text="#{WhodRenderingRulesBean.wizardDetailsCancelButtonText}" id="cb1can" action="CANCEL" immediate="true"
+                                shortDesc="#{WhodRenderingRulesBean.wizardDetailsCancelButtonHoverText}"/>
+              <af:spacer width="20" height="10" id="s3"/>
+              <af:inputText label="Filter Dictionary" id="it1aw"
+                              value="#{pageFlowScope.WhodWizardBean.activeDictionary} v#{pageFlowScope.WhodWizardBean.activeDictionaryVersion}" readOnly="false"
+                              disabled="true"
+                               columns="200"/>
+              <af:spacer width="10" height="10" id="s4"/>
+              <af:inputText label="Name" id="it3"
+                            value="#{pageFlowScope.WhodWizardBean.currentTermName}" readOnly="true"
+                            disabled="true" binding="#{WhodWizardUIBean.controlCurrentTermName}"
+                            columns="75"/>
+            </af:panelGroupLayout>
+          </f:facet>
+        </af:pageTemplate>
+      </af:form>
+    </af:document>
     </f:view>
 </jsp:root>
